Cambio en la tabla Rol
Método de actualización en la tabla Rol

--- a/Backend/Api/src/main/resources/application.properties
+++ b/Backend/Api/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=Api
 spring.datasource.url=jdbc:mysql://localhost:3306/proyecto?useSSL=false&serverTimezone=UTC
 # spring.datasource.url=jdbc:mysql://localhost:3306/NOMBRE_BASE_DE_DATOS?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=UserRoot0*
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Propiedades de Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
